fix navigation on mobile screen

--- a/frontend/src/styles/components/Navbar.css
+++ b/frontend/src/styles/components/Navbar.css
@@ -13,6 +13,7 @@
   top: 0;
   z-index: 1000;
 }
+
 .navbar-logo {
   font-size: 18px;
   font-weight: 700;
@@ -39,6 +40,7 @@
   background: var(--chat-bg);
   color: var(--color-primary);
 }
+
 /* 
 .navbar-btn {
   background: linear-gradient(135deg, var(--color-primary), var(--color-primary-600));
@@ -93,6 +95,7 @@
   margin-bottom: 6px;
   color: var(--text-default);
 }
+
 /* 
 .dropdown-logout {
   margin-top: 10px;
@@ -114,10 +117,6 @@
 }
 
 
-
-/* .logout-wrapper {
-  margin-left: 10px;
-} */
 
 
 /* ================= Mobile Navbar ================= */
@@ -142,7 +141,7 @@
     width: 100%;
     background: var(--surface);
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     padding: 12px;
     border-bottom: 1px solid var(--border);
     box-shadow: var(--shadow-md);
@@ -151,6 +150,8 @@
     pointer-events: none;
     transform: translateY(-10px);
     transition: 0.25s ease;
+    /* 
+    background: red; */
   }
 
   .navbar-links.open {
@@ -158,6 +159,7 @@
     pointer-events: auto;
     transform: translateY(0);
   }
+
   .user-dropdown {
     position: fixed;
     top: 154px;
@@ -165,8 +167,18 @@
     width: 100%;
     overflow-y: auto;
   }
+.user-btn{
+  display: flex;
+  justify-content: space-between;
 }
+.theme-toggle{
+  text-align: start;
+}
+  .navbar-link,
+  .theme-toggle,
+  .user-profile, .user-btn{
+    width: 100%;
+  }
+ 
 
-
-
-
+}
