--- a/frontend/src/styles/global/globals.css
+++ b/frontend/src/styles/global/globals.css
@@ -120,18 +120,6 @@ button:hover {
 }
 
 
-/* buttons */
-/* Logout button */
-.logout-btn {
-  background: transparent;
-  background-color: var(--danger);
-  padding: 6px 10px;
-  font-weight: 600;
-  font-size: 13px;
-  outline: 1px solid var(--danger);
-  box-shadow: 0 0 0 3px var(--danger);
-  color: white;
-}
 
 /* update button */
 .btn-primary {
